Fixed bug where footer is behind body

--- a/src/index.css
+++ b/src/index.css
@@ -179,7 +179,3 @@ p {
         rgba(0, 0, 0, 1) 80%
     );
 }
-
-body {
-    position: absolute;
-}
